# CLF_reactive_planning_system

./: .gitignore  CMakeLists.txt  README.md  copyright.sh  driver.diff  out.diff  package.xml  results-March-16.txt
config/: communication.yaml  cost_map.yaml  fake_map.yaml  fake_robot.yaml  local_map.yaml  lyap_dist_params.yaml  plane.yaml  pose_sampler.yaml  robot_params.yaml  rrt_params.yaml
include/: angle_functions.h  cassie_rrt_node.h  cassie_rrt_tree.h  cassie_to_planner_data_t.h  clf_rrt.h  communication.h  computation_analysis.h  control_commands.h  control_variables.h  controller_info_to_planner_t.h  cost_.h  cost_params_t.h  csv.h  driver.h  fake_map.h  fake_robot.h  float_comparision.h  info_to_robot_t.h  lie_group.h  local_chart.h  local_map.h  lyapunov_distance.h  lyapunov_path.h  map_cost.h  map_operation.h  multivariate_gaussian.h  nonholonomic_distance_.h  omni_ego_coordinates.h  omni_local_chart.h  planner_info_to_controller_t.h  point.h  pose.h  pose_distribution.h  position.h  robot_motion.h  robot_state.h  sample_pose.h  standalone_local_chart.h  standalone_lyapunov_distance.h  standalone_omni_local_chart.h  (+4 more)
include/utils/: debugger.h  debugger_.cpp  line.h  nameof.h  plane.h  plotting.h  ros_utils.h  template.h  timing.h  utils.h
include_2019/: Dstar.h  Dstar_.h  cassie_rrt_node.h  cassie_rrt_tree.h  clf_rrt.h  ctto.h  egocentric_coordinates.h  exceptions.h  fake_map.h  local_map.h  lyapunov_distance.h  lyapunov_path.h  map_utils.h  mapper.h  multivariate_gaussian.h  occupancy_grid_utils.h  point.h  pose.h  pose_distribution.h  position.h  robot_state.h  sample_pose.h  standalone_lyapunov_distance.h  udp.h  utils.h  utilsDstar.h  utilsDstar_pre.h  wavefront_frontier_detection.h  waypoint_data_t.h
include_2019/utils/: debugger.h  line.h  plotting.h  timing.h  utils.h
launch/: FRB_test_offline.launch  FRB_test_online.launch  cassie_planning.launch  cassie_planning_debug.launch  ctto.launch  cttoStandAlone.launch  fake_map.launch  fake_robot.launch  pipeline.launch  pipeline_wo_bag.launch  static_fake_robot.launch  test.launch  test_udp.launch  wavefield.launch  wavefield_online.launch
matlab/: 2021-20-06-17-44-07_random_numbers.csv  plotCommandHistory.m  plot_random_numbers.m
rviz/: FRB.rviz  FRB_demo.rviz  config.rviz  debug.rviz  driver.rviz  fake_robot.rviz  playback_bag.rviz  rrt.rviz  test.rviz  unit_test.rviz  viz_for_paper.rviz  wavefield.rviz
src/: cassie_rrt_tree.cpp  cassie_to_planner_data_t.c  clf_rrt.cpp  communication.cpp  control_commands.cpp  cost_.cpp  ctags_file  driver.cpp  fake_map.cpp  fake_robot.cpp  fake_robot_publisher.cpp  info_to_robot_t.c  lie_group.cpp  local_chart.cpp  local_map.cpp  lyapunov_distance.cpp  lyapunov_path.cpp  main.cpp  map_cost.cpp  map_operation.cpp  map_publisher.cpp  omni_local_chart.cpp  planner_info_to_controller_t.c  sample_pose.cpp  standalone_lyapunov_distance.cpp  standalone_omni_local_chart.cpp  standalone_omni_lyapunov_distance.cpp  static_robot_publisher.cpp  test_plane_fitting.cpp  test_rrt.cpp  test_rviz_tool.cpp  test_udp.cpp  unit_test.cpp  waypoint_data_t.c
src/pre_src/: waypoint_data_t_new.c
src/utils/: plane.cpp  plotting.cpp
src_2019/: cassie_rrt_tree.cpp  clf_rrt.cpp  ctags_file  fake_map.cpp  local_map.cpp  lyapunov_distance.cpp  main.cc  main_2019.cc  multivariate_gaussian.cpp  standalone_lyapunov_distance.cpp  test_rrt.cpp  waypoint_data_t.c
src_segfault/: cassie_rrt_tree.cpp  clf_rrt.cpp  communication.cpp  control_commands.cpp  controller_info_to_planner_t.c  ctags_file  driver.cpp  fake_map.cpp  local_map.cpp  lyapunov_distance.cpp  lyapunov_path.cpp  main.cpp  map_cost.cpp  map_publisher.cpp  planner_info_to_controller_t.c  pose.cpp  pose_distribution.cpp  robot_publisher.cpp  sample_pose.cpp  simple_test.cpp  standalone_local_chart.cpp  standalone_lyapunov_distance.cpp  test_rrt.cpp  test_udp.cpp  unit_test.cpp
src_segfault/pre_src/: Dstar.cc  Dstar_.cc  wavefront_frontier_detection.cc
src_segfault/utils/: plotting.cpp
